Write PID controller for precision navigation of the robot

--- a/1-hello-world-sphero.ipynb
+++ b/1-hello-world-sphero.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# NEW SPHEROS\n",
     "import sphero\n",
     "import time\n",
-    "\n",
-    "# NEW SPHEROS"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
     "                       \"68:86:E7:05:19:AD\": \"Sphero-RYR\",\n",
     "                       \"68:86:E7:05:12:26\": \"Sphero-RPB\"}\n",
     "\n",
-    "NBOTS = 3   # Number of spheros "
+    "NBOTS = 3   # Number of spheros \n"
    ]
   },
   {
