--- a/4-cy-basic-opencv.ipynb
+++ b/4-cy-basic-opencv.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic example of how opencv can be used to access the webcam. Will fail if you don't have 2 cameras on your laptop + an USB Logitech camera plugged in.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +32,8 @@
     "# CONSTANTS\n",
     "WEBCAM_NUMBER = 2  # different for every computer, may need to trial and error. Should be able to set to -1bring up menu\n",
     "\n",
-    "# Use Logitech Gaming Software Toolkit directions to manually set camer focus to something distant.\n",
+    "# Use Logitech Gaming Software Toolkit directions to manually set camer focus to something distant. Otherwise keeps refocusing.\n",
+    "\n",
     "# https://lieksa.pp.fi/oh7fes/cameras/focus.htm\n",
     "\n",
     "# WEBCAM_NUMBER = -1 # ought to work but leads to weird import errors, so don't use this."
@@ -33,21 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "error",
-     "evalue": "..\\..\\..\\opencv-2.4.13.2\\modules\\imgproc\\src\\contours.cpp:196: error: (-210) [Start]FindContours support only 8uC1 and 32sC1 images in function cvStartFindContours\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-8683bbbe10f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[1;31m# Our operations on the frame come here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[1;31m#     gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfindContours\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRETR_LIST\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCHAIN_APPROX_SIMPLE\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31merror\u001b[0m: ..\\..\\..\\opencv-2.4.13.2\\modules\\imgproc\\src\\contours.cpp:196: error: (-210) [Start]FindContours support only 8uC1 and 32sC1 images in function cvStartFindContours\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Basic example\n",
     "cam = cv2.VideoCapture(WEBCAM_NUMBER)\n",
@@ -57,32 +53,19 @@
     "    ret, frame = cam.read()\n",
     "\n",
     "    # Our operations on the frame come here\n",
-    "#     gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    val = cv2.findContours(frame, cv2.RETR_LIST, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    print len(val)\n",
+    "    #     gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "    # Display the resulting frame\n",
     "    cv2.imshow('frame', frame)\n",
-    "#     cv2.imshow('frame',gray)\n",
+    "    \n",
+    "    #     cv2.imshow('frame',gray)\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
     "        \n",
-    "    time.sleep(1)\n",
-    "        \n",
-    "\n",
-    "# When everything done, release the camture\n",
+    "# When everything done, release the cam object\n",
     "cam.release()\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
