--- a/5-cy-system-strategy.ipynb
+++ b/5-cy-system-strategy.ipynb
@@ -25,9 +25,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Videos\n",
+    "\n",
+    "- Embed here\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Proposed Strategy\n",
     "\n",
-    "Based on testing with the blocks on 4/22, I believe that the optimal pushing strategy looks something like this\n",
+    "Based on testing with the blocks on 4/22 to overcome above limitations, I believe that the optimal pushing strategy looks something like this. \n",
+    "\n",
+    "\n",
+    "Note that we work with objects with low surface friction, i.e. putting wooden blocks on top of a plastic tray.\n",
     "\n",
     "- Camera detects \"pushing plane\" of the target: the line on the object that the robots should be pushing against. The pushing plane is perpendicular to a direct line between the object and the target destination.\n",
     "\n",
@@ -38,6 +50,7 @@
     "\n",
     "\n",
     "    - On each frame, track the camera and just 1 of the robots. (Note the camera captures 20 FPS). Take turns re: which robot is being tracked.\n",
+    "    \n",
     "    - If a robot is behind the pushing plane, let it drive at constant speed towards the target, and update its pushing heading. (Only use PID controller if we are worried about the robots pushing the box too far/ with inertia). Status is \"PUSHING\"\n",
     "    - If robot is ahead of the pushing plane, set status to \"RETREATING\".\n",
     "\n",
@@ -48,9 +61,7 @@
     "    - If status is \"PUSHING\", push it along the current heading\n",
     "    - If status is \"RETREATING\", somehow get robot away from other robots, and pilot it back towards some fixed distance behind the pushing plane. (Maybe at 45 degree angles or something? They might bump towards each other.\n",
     "    - Break when object has reached its target destination.\n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "    "
    ]
   }
  ],
