Cleanup notebook 3 (team control), and initialize camera notebook

--- a/3-sphero-group-control.ipynb
+++ b/3-sphero-group-control.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# NEW SPHEROS\n",
+    "# Sphero imports\n",
     "import sphero\n",
-    "import time\n",
     "\n",
     "# Controller Functions\n",
+    "import time\n",
     "import os\n",
     "import json\n",
     "from pprint import pprint"
@@ -50,25 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{u'68:86:E7:05:0C:4B': u'Sphero-YYP',\n",
-      " u'68:86:E7:05:12:26': u'Sphero-RPB',\n",
-      " u'68:86:E7:05:19:AD': u'Sphero-RYR',\n",
-      " u'68:86:E7:09:4E:74': u'Sphero-YPR',\n",
-      " u'68:86:E7:09:A2:FE': u'Sphero-RWR',\n",
-      " u'68:86:E7:09:A6:FE': u'Sphero-ORG',\n",
-      " u'68:86:E7:09:A9:28': u'Sphero-GRY'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Use sphero app to get sphero names and MAC addresses\n",
+    "# Use sphero app to get sphero names and MAC addresses, and use those address to populate 'roster.json'\n",
     "PROJ_ROOT = os.getcwd()\n",
     "ROSTER = os.path.join(PROJ_ROOT, \"roster.json\")\n",
     "roster = readJsonFile(ROSTER)\n",
@@ -77,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -89,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize Sphero manager with addresses of local spheros\n",
     "manager._name_cache = roster\n",
@@ -111,25 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starts auto search\n",
-      "Found Sphero-RPB\n",
-      "Found Sphero-GRY\n",
-      "Found Sphero-YYP\n",
-      "Found Sphero-ORG\n",
-      "Found Sphero-RYR\n",
-      "Found Sphero-RWR\n",
-      "Found Sphero-YPR\n",
-      "Found all 7 spheros\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This searches the system cache for all of the robots. \n",
     "# It doesn't need the spheros to be turned on yet.\n",
@@ -146,34 +108,22 @@
     "        print \"Found all {} spheros\".format(NBOTS)\n",
     "        manager.stop_auto_search()\n",
     "                 \n",
-    "# Callback\n",
+    "# Callback: what to do when a new sphero is found\n",
     "manager.set_sphero_found_cb(on_new_sphero)\n",
     "\n",
     "# Construct list of devices in system bluetooth collection\n",
     "# Your bluetooth network cannot contain anything with name of \"Sphero-\" prefix\n",
     "devices = []\n",
-    "manager.start_auto_search()"
+    "manager.start_auto_search()\n",
+    "\n",
+    "# Wait for all spheros to be found before running the next cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sphero-RPB: 68:86:E7:05:12:26\n",
-      "Sphero-YPR: 68:86:E7:09:4E:74\n",
-      "Sphero-GRY: 68:86:E7:09:A9:28\n",
-      "Sphero-YYP: 68:86:E7:05:0C:4B\n",
-      "Sphero-RWR: 68:86:E7:09:A2:FE\n",
-      "Sphero-ORG: 68:86:E7:09:A6:FE\n",
-      "Sphero-RYR: 68:86:E7:05:19:AD\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "devices = []\n",
     "# Verify that these are the robots we are looking for\n",
@@ -184,12 +134,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Modify this list based on which spheros you actually have available at the moment.\n",
+    "\n",
     "activeBotNames = [\n",
     "    \"Sphero-RYR\",\n",
     "    \"Sphero-GRY\",\n",
@@ -205,12 +157,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are experiments on 4/15\n"
+    "The following were written between 4/15 - 4/22 to simplify multiple robot control.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -219,7 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "# Team control methods\n",
+    "# Bluetooth Initial / Closing communication\n",
     "    \n",
     "def connect_team(bots):\n",
     "    for i, bot in enumerate(bots):  \n",
@@ -229,7 +182,8 @@
     "def disconnect_team(bots):\n",
     "    for i, bot in enumerate(bots):  \n",
     "        bot.disconnect()\n",
-    "        \n",
+    "\n",
+    "# Light control\n",
     "def set_team_back_led(bots, status):\n",
     "    # Bright if true, dim if false\n",
     "    status = 0xaa if status else 0x00\n",
@@ -242,7 +196,6 @@
     "        colorTriple = colors[i]\n",
     "        bot.set_rgb(colorTriple[0], colorTriple[1], colorTriple[2])\n",
     "    \n",
-    "# Diagnostics\n",
     "\n",
     "def highlight_bot(bots, iBot):\n",
     "    for i, bot in enumerate(bots):\n",
@@ -256,12 +209,11 @@
     "        highlight_bot(bots, i)\n",
     "        time.sleep(duration)\n",
     "    \n",
+    "# Diagnostics\n",
     "def print_team_status(bots):\n",
     "    for bot in bots:\n",
     "        response = bot.get_power_state()\n",
     "        print \"{} {} | {}\".format(bot.bt_name, response.power_state, response.bat_voltage)\n",
-    "      \n",
-    "    return None\n",
     "    \n",
     "# MOVEMENT   \n",
     "def roll_sphero(bot, speed, heading, offset):\n",
@@ -272,7 +224,7 @@
     "    \n",
     "def set_team_timeout(bots, motionTimeout=2000):\n",
     "    \"\"\"\n",
-    "        Move all robots in same direction at shared speed\n",
+    "        How long robot should apply motor force for.\n",
     "    \"\"\"\n",
     "    for bot in bots:\n",
     "        bot.set_motion_timeout(motionTimeout)\n",
@@ -282,14 +234,11 @@
     "    \"\"\"\n",
     "        Move all robots in same direction at shared speed\n",
     "    \"\"\"\n",
-    "#     for bot in bots:\n",
-    "#         bot.set_motion_timeout(motionTimeout)\n",
     "    assert(len(bots) == len(offsets))\n",
-    "    tStart = time.time()\n",
     "    \n",
+    "    tStart = time.time()\n",
     "    for i, bot in enumerate(bots):\n",
     "        roll_sphero(bot, speed, heading, offsets[i])\n",
-    "        \n",
     "    tEnd = time.time()\n",
     "    \n",
     "    print(\"Dispatch Time {}\".format(tEnd - tStart) )\n",
@@ -309,12 +258,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, initialize robot objects\n"
+    "Now, provide a demo application of the above team control methods.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -326,45 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sphero-RYR try 0\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-RYR try 1\n",
-      "Connected!\n",
-      "Sphero-GRY try 0\n",
-      "Connected!\n",
-      "Sphero-YPR try 0\n",
-      "Connected!\n",
-      "Sphero-RWR try 0\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-RWR try 1\n",
-      "Connected!\n",
-      "Sphero-ORG try 0\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-ORG try 1\n",
-      "Connected!\n",
-      "Sphero-RPB try 0\n",
-      "Connected!\n",
-      "Sphero-YYP try 0\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-YYP try 1\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-YYP try 2\n",
-      "Connected!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect team to computer\n",
     "connect_team(bots)"
@@ -372,29 +285,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sphero-RYR Battery OK | 7.31\n",
-      "Sphero-GRY Battery OK | 7.33\n",
-      "Sphero-YPR Battery OK | 7.27\n",
-      "Sphero-RWR Battery OK | 7.3\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
-      "Sphero-ORG Battery OK | 7.3\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
-      "Sphero-RPB Battery OK | 7.38\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
-      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
-      "Sphero-YYP Battery OK | 7.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Make sure everyone's battery is above 7 volts. Below that they turn off.\n",
     "# Get roughly 2-3 hours of ontime (not continuous)\n",
@@ -403,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,6 +317,7 @@
     "\n",
     "POWER_SAVE = False\n",
     "\n",
+    "\n",
     "# Control Brightness\n",
     "if POWER_SAVE:\n",
     "    for color in colors:\n",
@@ -431,12 +325,12 @@
     "            color[i] /= 2\n",
     "\n",
     "# Initialization for any team\n",
-    "set_team_back_led(bots, True)\n"
+    "set_team_back_led(bots, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -448,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -467,37 +361,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
-    "highlight_bot(bots, 6)"
+    "# Use this to calculate offsets. Repeatedly run this cell and the next cell to populate \"botAngleOffsets\"\n",
+    "# appropriately in 2 cells from here. Using the offsets may or may not be preferable to using the offsets to tweak\n",
+    "# \"set heading\" each time.\n",
+    "highlight_bot(bots, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sphero.response.Response at 0x4da4668>"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bots[4].roll(70, )"
+    "bots[0].roll(70, 60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -518,66 +403,47 @@
     "    118   \n",
     "]\n",
     "\n",
+    "# 2-robot demo\n",
+    "botAngleOffsets = [\n",
+    "    240, 240    \n",
+    "]\n",
+    "\n",
     "nullOffsets = [0 for bot in bots]\n",
     "set_team_colors(bots, colors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# for i,offset in enumerate(botAngleOffsets):\n",
-    "#     bots[i].set_heading(offset)\n",
-    "    "
+    "highlight_team(bots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(7):\n",
-    "    time.sleep(1)\n",
-    "    highlight_bot(bots, i)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {
     "run_control": {
      "marked": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dispatch Time 0.438999891281\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Demo Reel: show basic polygon\n",
     "\n",
-    "corners = 4\n",
+    "corners = 3\n",
     "angles = [ i * (360 / corners) for i in range(corners)]\n",
     "\n",
     "# angles = [180]\n",
     "\n",
     "TIMEOUT = 1500\n",
+    "\n",
     "set_team_timeout(bots, TIMEOUT)\n",
     "for angle in angles:\n",
-    "    roll_sphero_team_synchronized(bots, 80, angle, botAngleOffsets, TIMEOUT)   "
+    "    roll_sphero_team_synchronized(bots, 70, angle, botAngleOffsets, TIMEOUT)   \n",
+    "    "
    ]
   },
   {
@@ -593,7 +459,8 @@
     "\n",
     "# angles = [180]\n",
     "\n",
-    "TIMEOUT = 4000\n",
+    "TIMEOUT = 2000\n",
+    "\n",
     "set_team_timeout(bots, TIMEOUT)\n",
     "for lap in range(laps):\n",
     "    for angle in angles:\n",
@@ -603,19 +470,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Demo Reel: Basic Push\n",
     "# Strategy: rewind and repush each time?\n",
     "\n",
-    "angles = [0]\n",
+    "angles = [180]\n",
     "TIMEOUT = 4000 # milliseconds of pushing\n",
+    "\n",
     "set_team_timeout(bots, TIMEOUT)\n",
     "for angle in angles:\n",
-    "    roll_sphero_team_synchronized(bots, 80, angle, botAngleOffsets, TIMEOUT)   "
+    "    roll_sphero_team_synchronized(bots, 90, angle, botAngleOffsets, TIMEOUT)   \n",
+    "    "
    ]
   },
   {
@@ -624,18 +491,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Demo Reel: Advanced Push\n",
+    "# Demo Reel: Advanced Blind Push\n",
     "# Strategy: rewind and repush each time?\n",
     "\n",
-    "ANGLES =   [0, 180]\n",
-    "TIMEOUTS = [3000, 2000] # milliseconds of pushing\n",
+    "angles   = [0, 180]\n",
+    "TIMEOUTS = [2700, 1500] # milliseconds of pushing: spend more time pushing forward than backwards\n",
     "\n",
     "for i in range(3): # number of cycles to repush\n",
-    "for timeout in TIMEOUTS:\n",
-    "    \n",
-    "    set_team_timeout(bots, timeout)\n",
-    "    for angle in angles:\n",
-    "        roll_sphero_team_synchronized(bots, 80, angle, botAngleOffsets, TIMEOUT)   "
+    "    for timeout in TIMEOUTS:\n",
+    "        set_team_timeout(bots, timeout)\n",
+    "        for angle in angles:\n",
+    "            roll_sphero_team_synchronized(bots, 80, angle, botAngleOffsets, TIMEOUT)        "
    ]
   }
  ],
