--- a/3-sphero-group-control.ipynb
+++ b/3-sphero-group-control.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -50,9 +50,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'68:86:E7:05:0C:4B': u'Sphero-YYP',\n",
+      " u'68:86:E7:05:12:26': u'Sphero-RPB',\n",
+      " u'68:86:E7:05:19:AD': u'Sphero-RYR',\n",
+      " u'68:86:E7:09:4E:74': u'Sphero-YPR',\n",
+      " u'68:86:E7:09:A2:FE': u'Sphero-RWR',\n",
+      " u'68:86:E7:09:A6:FE': u'Sphero-ORG',\n",
+      " u'68:86:E7:09:A9:28': u'Sphero-GRY'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Use sphero app to get sphero names and MAC addresses, and use those address to populate 'roster.json'\n",
     "PROJ_ROOT = os.getcwd()\n",
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -75,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize Sphero manager with addresses of local spheros\n",
     "manager._name_cache = roster\n",
@@ -89,9 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starts auto search\n",
+      "Found Sphero-RYR\n",
+      "Found Sphero-YPR\n",
+      "Found Sphero-ORG\n",
+      "Found Sphero-RPB\n",
+      "Found Sphero-GRY\n",
+      "Found Sphero-RWR\n",
+      "Found Sphero-YYP\n",
+      "Found all 7 spheros\n"
+     ]
+    }
+   ],
    "source": [
     "# This searches the system cache for all of the robots. \n",
     "# It doesn't need the spheros to be turned on yet.\n",
@@ -121,9 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sphero-RPB: 68:86:E7:05:12:26\n",
+      "Sphero-YPR: 68:86:E7:09:4E:74\n",
+      "Sphero-GRY: 68:86:E7:09:A9:28\n",
+      "Sphero-YYP: 68:86:E7:05:0C:4B\n",
+      "Sphero-RWR: 68:86:E7:09:A2:FE\n",
+      "Sphero-ORG: 68:86:E7:09:A6:FE\n",
+      "Sphero-RYR: 68:86:E7:05:19:AD\n"
+     ]
+    }
+   ],
    "source": [
     "devices = []\n",
     "# Verify that these are the robots we are looking for\n",
@@ -134,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -143,12 +195,12 @@
     "# Modify this list based on which spheros you actually have available at the moment.\n",
     "\n",
     "activeBotNames = [\n",
-    "    \"Sphero-RYR\",\n",
-    "    \"Sphero-GRY\",\n",
-    "    \"Sphero-YPR\",\n",
-    "    \"Sphero-RWR\",\n",
-    "    \"Sphero-ORG\",\n",
-    "    \"Sphero-RPB\",\n",
+    "#     \"Sphero-RYR\",\n",
+    "#     \"Sphero-GRY\",\n",
+    "#     \"Sphero-YPR\",\n",
+    "#     \"Sphero-RWR\",\n",
+    "#     \"Sphero-ORG\",\n",
+    "#     \"Sphero-RPB\",\n",
     "    \"Sphero-YYP\"\n",
     "]"
    ]
@@ -163,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -263,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -275,9 +327,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sphero-YYP try 0\n",
+      "Connected!\n"
+     ]
+    }
+   ],
    "source": [
     "# Connect team to computer\n",
     "connect_team(bots)"
@@ -285,9 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE! Removes wrong byte in start of header! Byte:  117\n",
+      "NOTE! Removes wrong byte in start of header! Byte:  62\n",
+      "Sphero-YYP Battery OK | 8.26\n"
+     ]
+    }
+   ],
    "source": [
     "# Make sure everyone's battery is above 7 volts. Below that they turn off.\n",
     "# Get roughly 2-3 hours of ontime (not continuous)\n",
@@ -296,9 +367,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Received unknown async msg! Header:  (255, 254, 5, 1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread SpheroReceiverThread:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 801, in __bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\cyick\\Anaconda2\\lib\\threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 415, in _receiver\n",
+      "    header = self._receive_header()\n",
+      "  File \"C:\\Users\\cyick\\AppData\\Roaming\\Python\\Python27\\site-packages\\sphero\\core.py\", line 299, in _receive_header\n",
+      "    first_byte = struct.unpack('B', raw_data)[0]\n",
+      "error: unpack requires a string argument of length 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Manage sphero colors consistently\n",
     "colors = [\n",
@@ -310,6 +407,10 @@
     "    [255, 255, 0],   # Yellow\n",
     "    [255, 133, 0],   # Orange\n",
     "    [255, 192, 203], # pink\n",
+    "]\n",
+    "\n",
+    "colors = [\n",
+    "     [0, 0 , 255] # B\n",
     "]\n",
     "\n",
     "# Colors to cut down\n",
@@ -392,6 +493,7 @@
     "# It would be nice to calibrate with the camera's help, but it's also ok if there isn't time.\n",
     "# Eventually these offsets could be moved to properties of the sphero object.\n",
     "# Recommend setting the 0 direction to be parallel to one of the walls.\n",
+    "# After refactoring, perhaps these \n",
     "\n",
     "botAngleOffsets = [\n",
     "    115, \n",
