modify multi sphero tracker method

--- a/6-combine-pid-camera.ipynb
+++ b/6-combine-pid-camera.ipynb
@@ -148,7 +148,7 @@
    },
    "outputs": [],
    "source": [
-    "bots = [devices[4]]"
+    "bots = [devices[4], devices[1]]\n"
    ]
   },
   {
@@ -161,9 +161,8 @@
      "output_type": "stream",
      "text": [
       "Sphero-RWR try 0\n",
-      "An exception of type IOError occurred. Arguments:\n",
-      "('A connection attempt failed because the connected party did not properly respond after a period of time, or established connection failed because connected host has failed to respond.\\r\\n',)\n",
-      "Sphero-RWR try 1\n",
+      "Connected!\n",
+      "Sphero-YPR try 0\n",
       "Connected!\n"
      ]
     }
@@ -179,22 +178,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sphero.response.Response at 0x692c358>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bots[0].set_rgb(0, 0, 255)\n",
-    "\n",
-    "\n"
+    "for bot in bots:\n",
+    "    bot.set_rgb(0,0,0)"
    ]
   },
   {
@@ -267,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,37 +409,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "offsets = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", , , , [251, 251, 251] | [324, 324, 324] \n",
-      "Start (251,324)\n",
-      ", , , , [335, 335, 335] | [177, 177, 177] \n",
-      "End   (335,177)\n",
-      "Angle 60.2551187031\n"
+      ", , , , [369, 369, 369] | [201, 201, 201] \n",
+      "Start (369,201)\n",
+      ", , , , [451, 451, 451] | [44, 44, 44] \n",
+      "End   (451,44)\n",
+      "Angle 62.4222501095\n",
+      "wait for meok\n",
+      ", , , , [289, 289, 289] | [218, 218, 218] \n",
+      "Start (289,218)\n",
+      ", , , , [159, 159, 159] | [255, 255, 255] \n",
+      "End   (159,255)\n",
+      "Angle 164.112831497\n",
+      "wait for med\n"
      ]
     }
    ],
    "source": [
-    "for bot in bots:\n",
-    "    bot.set_rgb(0, 0, 255)\n",
+    "offsets = []\n",
     "\n",
-    "offset = calibrate_bot_direction(bot, tracklist, [0, 0, 255], tracker, True)\n"
+    "for bot in bots:\n",
+    "    \n",
+    "    bot.set_rgb(0, 0, 255)\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "    offsets.append(calibrate_bot_direction(bot, tracklist, [0, 0, 255], tracker, True))\n",
+    "    bot.set_rgb(0,0,0)\n",
+    "    \n",
+    "    proceed = raw_input(\"Check if OK to proceed\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i, bot in enumerate(bots):\n",
+    "    \n",
+    "    bot.roll(50, offsets[i])\n",
+    "    "
    ]
   },
   {
